--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ uuid = "1.3.2"
 hnsw = "0.11.0"
 rand_pcg = "0.3.1"
 space = "0.18.0"
+serde_json = "1.0.96"
 
 [dev-dependencies]
 criterion = "0.4.0"
