--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ rust-bert = { git = "https://github.com/guillaume-be/rust-bert", branch = "maste
 thiserror = "1.0.40"
 tch = "0.12"
 uuid = "1.3.2"
-hnsw = "0.11.0"
-rand_pcg = "0.3.1"
-space = "0.18.0"
 serde_json = "1.0.96"
+hora = "0.1.1"
+typenum = "1.16.0"
+hnsw_rs = { git = "https://github.com/ruqqq/hnswlib-rs" }
 
 [dev-dependencies]
 criterion = "0.4.0"
