--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0.96"
 hora = "0.1.1"
 typenum = "1.16.0"
 hnsw_rs = { git = "https://github.com/ruqqq/hnswlib-rs" }
+snafu = "0.7.4"
 
 [dev-dependencies]
 criterion = "0.4.0"
