--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cedar"
+name = "cedar-db"
 authors = ["Tirth Jain <jaintirth24@gmail.com>", "Ayush Singh Bhandari"]
 version = "0.1.0"
 edition = "2021"
