--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ snafu = "0.7.4"
 derive_builder = "0.12.0"
 serde = "1.0.164"
 reqwest = { version = "0.11.18", features = [ "json" ]}
+clap = { version = "4.3.4", features = ["derive"] }
+tokio = { version = "1.28.2", features = ["full"] }
+warp = "0.3.5"
 
 [patch.crates-io]
 hnsw_rs = { git = "https://github.com/ruqqq/hnswlib-rs", rev = "018a296" }
